--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,3 +1,7 @@
-index:
+home:
     path: /
     controller: App\Controller\HomeController::home
+
+restaurant-detail:
+    path: /restaurant/{id}
+    controller: App\Controller\RestaurantController::restaurantDetail
