--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -5,3 +5,15 @@ home:
 restaurant-detail:
     path: /restaurant/{id}
     controller: App\Controller\RestaurantController::restaurantDetail
+
+inscription:
+    path: /inscription
+    controller: App\Controller\SecurityController::inscription
+
+login:
+    path: /login
+    controller: App\Controller\SecurityController::login
+
+logout:
+    path: /lougout
+    controller: App\Controller\SecurityController::logout
