formulaire creation de restaurant & validation & update restaurant entity

--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -4,4 +4,4 @@ home:
 
 restaurant-detail:
     path: /restaurant/{id}
-    controller: App\Controller\RestaurantController::restaurantDetail
+    controller: App\Controller\RestaurantController::form
