--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -22,6 +22,7 @@ security:
             form_login:
                 login_path: login
                 check_path: login
+                default_target_path: home
 
             logout:
                 path: logout
