formulaire de contact & envoi de mail & traduction & ajout des cartes sur la page de detail du restaurant

--- a/.env
+++ b/.env
@@ -25,5 +25,5 @@ DATABASE_URL=mysql://root:@127.0.0.1:3306/popina
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/swiftmailer-bundle ###
-MAILER_URL=gmail://peter.brejassou@gmail.com:ffzvngcuphtddxht@localhost
+MAILER_URL=gmail://lola.gauchet:kusjfkzpswhwnazr@localhost
 ###< symfony/swiftmailer-bundle ###
