--- a/config/services.yaml
+++ b/config/services.yaml
@@ -12,7 +12,9 @@ services:
     _defaults:
         autowire: true      # Automatically injects dependencies in your services.
         autoconfigure: true # Automatically registers your services as commands, event subscribers, etc.
-
+        bind:
+            $restaurantLog: '@monolog.logger.restaurant'
+            $utilisateurLog: '@monolog.logger.utilisateur'
     # makes classes in src/ available to be used as services
     # this creates a service per class whose id is the fully-qualified class name
     App\:
@@ -24,6 +26,9 @@ services:
     App\Controller\:
         resource: '../src/Controller'
         tags: ['controller.service_arguments']
+
+    # App\Controller\RestaurantController:
+    #     arguments: ['@monolog.logger.restaurant']
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
