--- a/config/packages/dev/monolog.yaml
+++ b/config/packages/dev/monolog.yaml
@@ -17,3 +17,23 @@ monolog:
             type: console
             process_psr_3_messages: false
             channels: ["!event", "!doctrine", "!console"]
+            
+        doctrine:
+            type: stream
+            path: "%kernel.logs_dir%/doctrine.log"
+            channels: [doctrine]
+
+        restaurant:
+            type: stream
+            path: "%kernel.logs_dir%/restaurant.log"
+            channels: [restaurant]
+
+        utilisateur:
+            type: stream
+            path: "%kernel.logs_dir%/utilisateur.log"
+            channels: [utilisateur]
+            
+        login:
+            type: stream
+            path: "%kernel.logs_dir%/login.log"
+            channels: [security]
